--- a/resplus.html
+++ b/resplus.html
@@ -48,11 +48,11 @@
       /* Set the style for the main page content */
       
       .leftpanel,.rightpanel{
-	      width:50%;
+	      width:52%;
 	      float:left;
 	      height:calc(100vh - 40px);
 	      overflow:hidden;
-	      padding:10px;
+	      padding:20px;
 	      padding-right:30px;
 	    }
 	 .rightpanel:hover{
@@ -171,8 +171,8 @@
 </div>	  
     <div class="jdcontent">
       <div class='leftpanel'>
-      <h1>Job Description </h1>
-      <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
+      <h2>Job Description </h2>
+      <p> Paste a job description below. And get AI enhanced Job details with questions. or </p>
       <label id='jdskills'></label>
         <button onclick='$("#description").html($("#samplejob").html());$("#submit").click()'> Load a sample job description </button><button style='float:right' id='submit'>Process this</button>
         <section id="jd_section">
