--- a/askai.html
+++ b/askai.html
@@ -26,7 +26,7 @@
         //question = $("#prompt_div").val();
         //$("#result").html("AI is slow :) ... if you are patient you will be pleasantly surprised");
         $.ajax({
-            url: "https://script.google.com/macros/s/AKfycbzM1DbNzmxKqygbeDTeo-6hAr8griyFjk1g1d-jpvkYZFc4RWxbmCrqnv6Z_RmzDQir/exec?AskAI="+question+"&Who=You are an expert",
+            url: "https://askai-node-ndmd3ghqma-ue.a.run.app?q="+question,
             type: 'GET',
             complete: function() {
             },
