--- a/askai.html
+++ b/askai.html
@@ -33,7 +33,7 @@
             complete: function() {
             },
             success: function(result) {
-                $("#result").html(result);
+                $("#result").append(result);
                  // $("#form").hide();
             }
         });
