--- a/askai.html
+++ b/askai.html
@@ -7,7 +7,10 @@
 
 <div id="container">
 <div id="form" >
-<textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica" placeholder="What do you want to ask AI"></textarea><br><button id="send" onclick="askAI()">Send</button><br>
+<textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica" placeholder="What do you want to ask AI"></textarea>
+<br>
+<button id="send" onclick="askAI()">Send</button>
+<button id="sendtoGPT" >SendtoGPT</button><br>
 </div>
 <div id="result" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></div>
 </div>
