--- a/askai.html
+++ b/askai.html
@@ -60,12 +60,12 @@
   <div id="form" style="
      
   ">
-  <textarea id="prompt_div" placeholder="What do you want to ask AI"></textarea>
+  <textarea id="prompt_div" placeholder="What do you want to ask AI" style="height: 150px;width: 616px;"></textarea>
   
   
   <button id="sendtoGPT">AskGPT</button><br>
   </div>
-<div id="result" ></div>
+<div id="result"></div>
 </div>
 
 
@@ -99,8 +99,8 @@
   
 
 </script>
-</body>  
-</html>
+  
+
 
 
 
