--- a/askai.html
+++ b/askai.html
@@ -1,10 +1,12 @@
 <html><head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-      <style>
+  <style>
     body {
         font-family: helvetica, sans-serif;
-      background:#333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       }
   
       #container {
@@ -12,6 +14,11 @@
         flex-direction: column;
         align-items: center;
         margin-top: 50px;
+        background:#eee;
+        padding:20px;
+        width:fit-content;
+        border-radius:20px;
+       box-shadow:-5px -5px 5px gray;
       }
   
       #form {
@@ -34,7 +41,7 @@
         margin: 10px;
         padding: 10px 20px;
         font-size: 16px;
-        background-color: black;
+        background-color: #6ba068;
         color: white;
         border: none;
         border-radius: 5px;
@@ -45,14 +52,14 @@
         height: 300px;
         width: 700px;
         font-size: 14px;
-        background: #eee;
+        background: #fcf9ef;
         border: 1px solid gray;
         padding: 20px;
         margin: 10px;
         overflow: auto;
       border-radius:10px;
       }
-  </style> 
+  </style>
   </head>
   <body>  
   
