--- a/askai.html
+++ b/askai.html
@@ -64,9 +64,8 @@
   <body>  
   
   <div id="container">
-  <div id="result" contenteditable="true">Enter the topic for the session today in the below box.&nbsp;<div><br></div><div>I will give you a question, and will evaluate your answer.</div><div><br></div><div>I will then ask you another question.</div></div><div id="form" style="
-     
-  ">
+  <div id="result" contenteditable="true"></div>
+  <div id="form" >
   <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" style="">I want check my understanding on the topic : </textarea>
   
   
@@ -107,6 +106,5 @@
 
 </script>
   
-
-
-</body></html>
+</body>
+</html>
