--- a/askai.html
+++ b/askai.html
@@ -64,9 +64,14 @@
   <body>  
   
   <div id="container">
-  <div id="result" contenteditable="true"></div>
+  <div id="result" contenteditable="true">
+    <div>
+      Type the <input id="topic" placeholder="topic you are interested" /> in and I will ask you questions.
+    </div>
+
+  </div>
   <div id="form" >
-  <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" style="">I want check my understanding on the topic : </textarea>
+  <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" style="">Ask me a question. I want check my understanding on the topic : </textarea>
   
   
   <button id="sendtoGPT">AskGPT</button><br>
