--- a/askai.html
+++ b/askai.html
@@ -71,7 +71,7 @@
 
   </div>
   <div id="form" >
-  <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" style=""> </textarea>
+  <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" ></textarea>
   
   
   <button id="sendtoGPT">AskGPT</button><br>
