--- a/askai.html
+++ b/askai.html
@@ -68,13 +68,14 @@
     <div>
       Type the <input id="topic" placeholder="topic you are interested" /> in and I will ask you questions.
     </div>
-
+   
   </div>
+  <button id="sendtoGPT"> > </button><br>
   <div id="form" >
   <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" ></textarea>
   
   
-  <button id="sendtoGPT">AskGPT</button><br>
+ 
   </div>
 
 </div>
