--- a/askai.html
+++ b/askai.html
@@ -59,14 +59,17 @@
         overflow: auto;
       border-radius:10px;
       }
+      #topic{
+        font-size: large;
+      }
   </style>
   </head>
   <body>  
-  
+    Topic : <input id="topic" placeholder="Enter a topic you are interested" /> 
   <div id="container">
   <div id="result" contenteditable="true">
     <div>
-      Type the <input id="topic" placeholder="topic you are interested" /> in and I will ask you questions.
+      This app will help you access your understanding on any topic. 
     </div>
    
   </div>
