--- a/askai.html
+++ b/askai.html
@@ -65,7 +65,7 @@
   </style>
   </head>
   <body>  
-    Topic : <input id="topic" placeholder="Enter a topic you are interested" /> 
+   <h1> Topic : <input id="topic" placeholder="Enter a topic you are interested" /> </h1>
   <div id="container">
   <div id="result" contenteditable="true">
     <div>
