--- a/askai.html
+++ b/askai.html
@@ -78,7 +78,7 @@
   </div>
   <button id="sendtoGPT"> > </button><br>
   <div id="form" >
-  <textarea contenteditable="true" id="prompt_div" placeholder="What do you want to ask AI" ></textarea>
+  <textarea contenteditable="true" id="prompt_div" placeholder="Answer the question" ></textarea>
   
   
  
