--- a/askai.html
+++ b/askai.html
@@ -62,7 +62,9 @@
       }
       #topic{
         font-size: large;
-        width:50%;
+        width:400px;
+        border:none;
+        border-radius: 10px;
       }
   </style>
   </head>
