--- a/askai.html
+++ b/askai.html
@@ -61,7 +61,7 @@
       border-radius:10px;
       }
       #topic{
-        font-size: large;
+        font-size: x-large;
         width:400px;
         border:none;
         border-radius: 10px;
