--- a/askai.html
+++ b/askai.html
@@ -84,11 +84,10 @@
         width:100px;
         padding:30px;
         margin:10px;
-        float:left;
         border:1px solid gray;
         border-radius:10px;
         background:white;
-
+        cursor:pointer;
       }
   </style>
   </head>
@@ -127,7 +126,8 @@
   $("#topic_chooser").hide();
     $("#container").show();
   }else{
-    
+    $("#topic_chooser").show();
+    $("#container").hide();
     $(".topic_option").click(function(){
       loc.href = "askai.html?topic="+$(this).text();
     })
