--- a/askai.html
+++ b/askai.html
@@ -75,7 +75,7 @@
         margin-top: 10px;
         background:#eee;
         padding:20px;
-        width:fit-content;
+        width:50%;
         border-radius:20px;
        box-shadow:-5px -5px 5px gray;
       }
