--- a/askai.html
+++ b/askai.html
@@ -68,7 +68,7 @@
       }
       #topic_chooser{
             
-           display: flex;
+           display: block;
            
         flex-direction: column;
         align-items: center;
@@ -89,6 +89,7 @@
         background:white;
         cursor:pointer;
         text-decoration: none;
+        color:gray;
       }
   </style>
   </head>
