--- a/askai.html
+++ b/askai.html
@@ -65,6 +65,7 @@
         width:400px;
         border:none;
         border-radius: 10px;
+        padding:10px;
       }
       #topic_chooser{
             
