--- a/askai.html
+++ b/askai.html
@@ -50,9 +50,10 @@
       }
   
       #result {
-        height: 300px;
+        font-family: helvetica, sans-serif;
+        height: 200px;
         width: 700px;
-        font-size: 14px;
+        font-size: large;
         background: #fcf9ef;
         border: 1px solid gray;
         padding: 20px;
