--- a/askai.html
+++ b/askai.html
@@ -96,7 +96,7 @@
   </style>
   </head>
   <body>  
-   
+  <div id="toolbar"><a href="/">Home</a> <button id="getReport">Get Report</button></div>
   <div id="container">
     <h1> Topic : <input id="topic" placeholder="Enter a topic you are interested" /> </h1>
   <div id="question_box" >
