--- a/askai.html
+++ b/askai.html
@@ -33,9 +33,9 @@
         height: 150px;
         width: 600px;
         font-size: 14px;
-  padding:20px;
-  border-radius:10px;
-      display: none;
+        padding:20px;
+        border-radius:10px;
+        display: none;
       }
   
       #sendtoGPT {
@@ -96,7 +96,7 @@
   </style>
   </head>
   <body>  
-  <div id="toolbar"><a href="/">Home</a> <button id="getReport">Get Report</button></div>
+  <div id="toolbar"><a href="/interview/askai.html">Home</a> <button id="getReport">Get Report</button></div>
   <div id="container">
     <h1> Topic : <input id="topic" placeholder="Enter a topic you are interested" /> </h1>
   <div id="question_box" >
