--- a/askai.html
+++ b/askai.html
@@ -38,7 +38,7 @@
         display: none;
       }
   
-      #sendtoGPT {
+      #sendtoGPT,#getReport {
         margin: 10px;
         padding: 10px 20px;
         font-size: 20px;
@@ -93,6 +93,19 @@
         text-decoration: none;
         color:gray;
       }
+      #toolbar{
+        display: flex;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        background-color: #333;
+        color: white;
+        text-decoration: none;
+        width: 100%;
+    }
   </style>
   </head>
   <body>  
