--- a/askai.html
+++ b/askai.html
@@ -112,9 +112,11 @@
         flex-direction: column;
         align-items: center;
         margin-top: 10px;
-        background:#eee;
+        background:white;
         padding:20px;
-        width:fit-content;
+        width:80%;
+        height:80%;
+        overflow: auto;
         border-radius:20px;
         box-shadow:-5px -5px 5px gray;
     }
