--- a/askai.html
+++ b/askai.html
@@ -123,7 +123,7 @@
   </style>
   </head>
   <body>  
-  <div id="toolbar"><a style="text-decoration: none;" href="/interview/askai.html">Home</a> <button id="getReport">Get Report</button></div>
+  <div id="toolbar"><a style="text-decoration: none;color:white" href="/interview/askai.html">Home</a> <button id="getReport">Get Report</button></div>
   <div id="container">
     <h1> Topic : <input id="topic" placeholder="Enter a topic you are interested" /> </h1>
   <div id="question_box" >
