--- a/askai.html
+++ b/askai.html
@@ -7,6 +7,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background:#dcdcda;
       }
   
       #container {
