--- a/askai.html
+++ b/askai.html
@@ -243,7 +243,7 @@ $("#sendtoGPT").click(function(){
 function paidAI(question) {
   alert(question);
 $.ajax({
-      url: "https://askai-node-ndmd3ghqma-ue.a.run.app?q="+JSON.stringify(question),
+      url: "https://askai-node-ndmd3ghqma-ue.a.run.app?q="+encodeURIComponent(question),
       type: 'GET',
       complete: function() {
       },
