--- a/askai.html
+++ b/askai.html
@@ -241,7 +241,7 @@ $("#sendtoGPT").click(function(){
 
 
 function paidAI(question) {
-  alert(question);
+  //alert(question);
 $.ajax({
       url: "https://askai-node-ndmd3ghqma-ue.a.run.app?q="+encodeURIComponent(question),
       type: 'GET',
