--- a/askai.html
+++ b/askai.html
@@ -148,7 +148,7 @@
 <a href="?topic=High School Computer Science" class="topic_option">High School Computer Science</a>
 <a href="?topic=High School English" class="topic_option">High School English</a>
 </div>
-<div id="report_card"></div>
+<div id="report_card"><h2>Your report card</h2></div>
 <script>
   var loc = window.location.href;
   if(loc.indexOf("?topic=")>0){
