--- a/askai.html
+++ b/askai.html
@@ -4,13 +4,15 @@
   <style>
     body {
         font-family: helvetica, sans-serif;
+        
       background:#dcdcda;
+      overflow:auto;
       }
   #container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 10%;
   background:#eee;
   padding:20px;
   width:80%;
