--- a/askai.html
+++ b/askai.html
@@ -9,6 +9,10 @@
       overflow:auto;
       }
   #container {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
