--- a/askai.html
+++ b/askai.html
@@ -53,7 +53,7 @@
 #result {
   font-family: helvetica, sans-serif;
   height: 200px;
-  width: 100%;
+  width: 200px;
   font-size: large;
   background: #fcf9ef;
   border: 1px solid gray;
