--- a/askai.html
+++ b/askai.html
@@ -25,7 +25,7 @@
 
 #question_box {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
 }
