--- a/askai.html
+++ b/askai.html
@@ -54,7 +54,7 @@
 #result {
   font-family: helvetica, sans-serif;
   height: 200px;
-  min-width: 150px;
+  width: 100%;
   font-size: large;
   background: #fcf9ef;
   border: 1px solid gray;
