--- a/askai.html
+++ b/askai.html
@@ -133,7 +133,7 @@
   <div id="container">
     <h1> Topic : <input id="topic" placeholder="Enter a topic you are interested" /> </h1>
   
-    <div id="result">
+    <div id="result" contenteditable="true">
       Are you ready... let us go...
     </div>
     <button id="sendtoGPT">Go > </button>
