--- a/askai.html
+++ b/askai.html
@@ -274,10 +274,11 @@ function getQs(topic = "AWS Lamda"){
   $.get("https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name="+topic,function(data){
     
    qa = JSON.parse(data); 
-    
+   $("#result").html(qa[question_index][0]);
+   question_index++; 
   });
 }
-getQs(topic);
+window.setTimeout(function(){ getQs(topic);},2000);
 </script>
   
 </body>
