--- a/askai.html
+++ b/askai.html
@@ -275,7 +275,8 @@ $.ajax({
 }
 
 function getQs(topic = "AWS Lamda"){
-  $.get("https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name="+topic,function(data){
+  url = "https://gsproxy-ndmd3ghqma-ue.a.run.app?url=https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name="+encodeURIComponent(topic);
+  $.get(url,function(data){
     
    qa = JSON.parse(data); 
    $("#result").html(qa[question_index][0]);
