topic not passed

--- a/askai.html
+++ b/askai.html
@@ -274,7 +274,7 @@ $.ajax({
   });
 }
 
-function getQs(topic = "AWS Lamda"){
+function getQs(){
   url = "https://gsproxy-ndmd3ghqma-ue.a.run.app?url=https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name="+encodeURIComponent(topic);
   $.get(url,function(data){
     
