--- a/askai.html
+++ b/askai.html
@@ -275,8 +275,9 @@ $.ajax({
 }
 
 function getQs(){
-  url = "https://gsproxy-ndmd3ghqma-ue.a.run.app?url=https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name=AWS Lamda";//+encodeURIComponent(topic);
- // url = "https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name=AWS Lamba";
+  url = "https://gsproxy-ndmd3ghqma-ue.a.run.app?url=https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name="+(topic.replaceAll(" ","%20"));
+ 
+  // url = "https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name=AWS Lamba";
   $.get(url,function(data){
     
    qa = JSON.parse(data); 
