--- a/askai.html
+++ b/askai.html
@@ -209,6 +209,7 @@ function process_error_response(text){
 $("#sendtoGPT").click(function(){
   if(qa.length > 0) {
   $("#result").html(qa[question_index][0]);
+  $("#result").append(qa[question_index][1]);
   question_index++;
   }else{
     getQs();
