--- a/askai.html
+++ b/askai.html
@@ -213,8 +213,10 @@ $("#sendtoGPT").click(function(){
     if(ans.length >1){
       $("#result").append(qa[question_index][1]);
       $("#prompt_div").val("");
+      $("#prompt_div").hide();
     }else{
       $("#result").html(qa[question_index][0]);
+      $("#prompt_div").show();
     }
   
   
