--- a/askai.html
+++ b/askai.html
@@ -212,8 +212,12 @@ $("#sendtoGPT").click(function(){
   if(qa.length > 0) {
     if(ans.length >1){
       $("#result").append("<p>" +qa[question_index][1]);
+      
+      $("#report_card").append("<div class='question'><h3>"+(question_index)+". "+qa[question_index][0] + " </h3></div>");
+      $("#report_card").append("<div class='user_answer'>&nbsp;&nbsp;&nbsp;&nbsp;<b>Your answer</b> : "+inputval + "</div>");
+      
       $("#prompt_div").val("");
-      $("#prompt_div").hide();
+      $("#prompt_div").hide();  
     }else{
       $("#result").html(qa[question_index][0]);
       $("#prompt_div").show();
