--- a/askai.html
+++ b/askai.html
@@ -214,7 +214,7 @@ $("#sendtoGPT").click(function(){
       $("#result").append("<p>" +qa[question_index][1]);
       
       $("#report_card").append("<div class='question'><h3>"+(question_index)+". "+qa[question_index][0] + " </h3></div>");
-      $("#report_card").append("<div class='user_answer'>&nbsp;&nbsp;&nbsp;&nbsp;<b>Your answer</b> : "+inputval + "</div>");
+      $("#report_card").append("<div class='user_answer'>&nbsp;&nbsp;&nbsp;&nbsp;<b>Your answer</b> : "+ans + "</div>");
       
       $("#prompt_div").val("");
       $("#prompt_div").hide();  
