--- a/askai.html
+++ b/askai.html
@@ -289,6 +289,7 @@ $.ajax({
       complete: function() {
       },
       success: function(result) {
+        alert(result);
          //process_response(result);
            return result;
       }
